--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 *,
 ::before,
 ::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.mobile-icon {
+  font-size: 20px;
+}
+
+@import './partials/variables';
+@import './partials/navigation';
+@import './partials/spell-list';
+
+.wrapper {
+  max-width: $xl;
+  margin: 0 auto;
 }
