--- a/src/styles/partials/_spell-list.scss
+++ b/src/styles/partials/_spell-list.scss
@@ -7,20 +7,20 @@
   }
 
   &__table-container {
-    max-width: 400px;
-    overflow-y: auto;
+    width: 100%;
     overflow-x: auto;
+    overflow-y: auto;
   }
 
   &__count {
     font-size: medium;
-    text-align: right;
+    text-align: center;
     color: $primaryTextColor;
     margin-bottom: 1rem;
   }
 
   &__table {
-    max-width: 100%;
+    width: 100%;
     border-spacing: 0;
     margin: 0 auto;
     overflow-x: auto;
